syntax = "proto3";

package pb;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service Storage {
    rpc Add (KeyValue) returns (Empty) {}
    rpc AddWithTtl (KeyValueTtl) returns (Empty) {}
    rpc Value (Key) returns (T) {}
    rpc ListAll (Empty) returns (stream T) {}
    rpc Remove (Key) returns (Empty) {}
    rpc TimeAlive (Key) returns (TtlResponse) {}
    rpc SetTtl (TtlRequest) returns (Empty) {}
}

message Empty {}

message Key {
    string key = 1;
}

message T {
    string value = 1;
}

message KeyValue {
    string key = 1;
    T value = 2;
}

message KeyValueTtl {
    string key = 1;
    T value = 2;
    google.protobuf.Duration ttl = 3;
}

message TtlRequest {
    string key = 1;
    google.protobuf.Timestamp stamp = 2;
}

message TtlResponse {
    google.protobuf.Duration ttl = 1;
}